[tool.poetry]
name = "ml-physics"
version = "0.1.0"
description = ""
authors = ["Matej <matouhrin@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
pint = "^0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
